# rr

./: CHANGES  INSTALL  MD5SUM  Makefile.in  README.md  config.h.in  configure  configure.in  rr.1  rr.c  rr.h  rr.h.in  rr.lsm  rr.lsm.in
adm/: makepkg
